Added everything_html framework

--- a/package.json
+++ b/package.json
@@ -3,21 +3,24 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www --exec babel-node -e js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "html2json": "^1.0.2",
     "http-errors": "~1.6.2",
     "mongodb": "^3.2.3",
     "mongoose": "^5.5.4",
     "morgan": "~1.9.0",
+    "node-fetch": "^2.4.1",
     "pug": "^2.0.3"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.4",
-    "@babel/preset-env": "^7.4.4"
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "nodemon": "^1.18.11"
   }
 }
